@@ -1,0 +1,66 @@
+// MonoDevelop ClassDesigner
+//
+// Authors:
+//	Manuel Cerón <ceronman@gmail.com>
+//
+// Copyright (C) 2009 Manuel Cerón
+//
+// Permission is hereby granted, free of charge, to any person obtaining a copy
+// of this software and associated documentation files (the "Software"), to deal
+// in the Software without restriction, including without limitation the rights
+// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+// copies of the Software, and to permit persons to whom the Software is
+// furnished to do so, subject to the following conditions:
+//
+// The above copyright notice and this permission notice shall be included in
+// all copies or substantial portions of the Software.
+//
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+// THE SOFTWARE.
+
+using System;
+using System.Collections.Generic;
+using Gtk;
+using Gdk;
+using MonoHotDraw.Figures;
+using MonoDevelop.Core;
+using MonoDevelop.Projects.Dom;
+using MonoDevelop.Core.Gui;
+
+namespace MonoDevelop.ClassDesigner.Figures {
+	
+	public class EnumFigure: TypeFigure {
+		
+		public EnumFigure(): base() {
+			identifiers = new VStackFigure();
+			
+			AddMemberGroup(identifiers);
+		}
+		
+		public EnumFigure(IType domtype): this() {
+			if (domtype == null || domtype.ClassType != ClassType.Enum) {
+				throw new ArgumentException();
+			}
+			
+			Header.Name = domtype.Name;
+			Header.Namespace = domtype.Namespace;
+			Header.Type = domtype.ClassType.ToString();
+			
+			foreach (IField field in domtype.Fields) {
+				Pixbuf icon = Services.Resources.GetIcon(field.StockIcon, IconSize.Menu);
+				AddIdentifier(icon, field.ReturnType.Name, field.Name);
+			}
+		}
+		
+		public void AddIdentifier(Pixbuf icon, string type, string name) {
+			identifiers.Add(new TypeMemberFigure(icon, "", name));
+		}
+		
+		VStackFigure identifiers;
+	}
+}
