@@ -1,3 +1,9 @@
+2009-08-01  Manuel Cerón  <ceronman@gmail.com>
+
+	* TypeFigure.cs: AddMemberGroup uses VstackFigure
+
+	* EnumFigure.cs: Added Enum Figure
+
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
 	* InheritanceConnection.cs: Added inheritance connection
