@@ -1,3 +1,9 @@
+2009-08-01  Manuel Cerón  <ceronman@gmail.com>
+
+	* MonoDevelop.ClassDesigner.csproj: Project updated
+
+	* ClassDesignerView.cs: Adding Enum Figures Too
+
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
 	* ClassDesignerView.cs: Added creation of all classes and
